# release-notes-scraper

./: README.md  pyproject.toml  release-notes-scraper.py
.github/workflows/: ci.yml
scraper/: scraper.py
