[tool.poetry]
name = "release-notes-scraper"
version = "0.1.0"
description = "Grab the changelog from releases on Github"
authors = ["Dan Čermák <dcermak@suse.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.10"
requests = ">=2.26"
packaging = ">=21.3"

[tool.poetry.dev-dependencies]
black = ">=21.12b0"

[tool.poetry.group.dev.dependencies]
mypy = ">=0.991"
types-requests = ">=2.26"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
